Production ready for Render, Vercel, and new Google OAuth